[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    'girder-client==3.2.3'
]
name = "dsa_utils"
authors = [
    {name = "Juan C. Vizcarra", email = "jvizcar@emory.edu"},
]
maintainers = [
    {name = "Juan C. Vizcarra", email = "jvizcar@emory.edu"}
]
description = "Utility functions for working with the DSA girder client."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["dsa", "girder", "girder_client"]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true

[project.urls]
Repository = "https://github.com/Gutman-Lab/dsa-python-utils"
