[project]
dependencies = [
    'girder-client==3.2.3'
]
name = "dsa_utils"
authors = [
    {name = "Juan C. Vizcarra", email = "jvizcar@emory.edu"},
]
maintainers = [
    {name = "Juan C. Vizcarra", email = "jvizcar@emory.edu"}
]
description = "Utility functions for working with the DSA girder client."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["dsa", "girder", "girder_client"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Gutman-Lab/dsa-python-utils"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "dsa_utils/_version.py"